add_library(vmp_loader_ios STATIC
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ios_loader.cpp)
target_link_libraries(vmp_loader_ios PUBLIC vmp_build_options vmp_loader_common vmp_runtime_state vmp_runtime_audit vmp_runtime_strings vmp_runtime_integrity)
target_include_directories(vmp_loader_ios PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
set_target_properties(vmp_loader_ios PROPERTIES OUTPUT_NAME vmp_loader_ios)
