add_library(vmp_loader_windows STATIC
  ${CMAKE_CURRENT_SOURCE_DIR}/src/windows_loader.cpp)
target_link_libraries(vmp_loader_windows PUBLIC vmp_build_options vmp_loader_common vmp_runtime_state vmp_runtime_audit vmp_runtime_strings vmp_runtime_integrity)
target_include_directories(vmp_loader_windows PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
